fullSandbox11072023/force-app/main/default/objects/New_Product_Tracking_Rule__c/New_Product_Tracking_Rule__c.object-meta.xml
<CustomObject>
    <label>New Product Tracking Rule</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>New Product Tracking Rule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>New Product Tracking Rule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>