fullSandbox11072023/force-app/main/default/objects/New_Product_Tracking_Rule__c/fields/IsProductOfInterest__c.field-meta.xml
<CustomField>
    <fullName>IsProductOfInterest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsProductOfInterest</label>
    <type>Checkbox</type>
</CustomField>