fullSandbox11072023/force-app/main/default/objects/New_Product_Tracking_Rule__c/fields/IsProductSales__c.field-meta.xml
<CustomField>
    <fullName>IsProductSales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsProductSales</label>
    <type>Checkbox</type>
</CustomField>