fullSandbox11072023/force-app/main/default/objects/New_Product_Tracking_Rule__c/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified Date/Time</label>
    <type>DateTime</type>
</CustomField>