fullSandbox11072023/force-app/main/default/objects/New_Product_Tracking_Rule__c/fields/New_Product_Tracking__c.field-meta.xml
<CustomField>
    <fullName>New_Product_Tracking__c</fullName>
    <label>New Product Tracking</label>
    <referenceTo>New_Product_Tracking__c</referenceTo>
    <relationshipLabel>New Product Tracking Rule</relationshipLabel>
    <relationshipName>New_Product_Tracking_Rule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>