fullSandbox11072023/force-app/main/default/objects/New_Product_Tracking_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Business_Unit__c</columns>
    <columns>Key__c</columns>
    <columns>New_Product_Tracking__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>